9/10/2017 1.6.2.10
    programmer visible changes:
    * new class TableBase to be a common base for InstlItemsTable, SVNTable
    * refactored many db queries to use TableBase.select_and_fetchall

    user visible changes:
    * fixed s3/CF incompatibilities when reading local info_map files

8/10/2017 1.6.2.9
    user visible changes:
    * fixed: .wtar items were not marked with wtarFlag in SVNTable

6/10/2017 1.6.2.8
    admin vidible changes:
    * added better progress messages around "depends" in InstlAdmin.create_links_for_revision
    * reduced InstlAdmin.do_depend time from 80 to 26 seconds by reducing complexity of InstlInstanceBase.needs & needed_by

    programmer visible changes:
    * reorder fields in SVNRow
    * reimplemented SVNTable.read_from_text, SVNTable.initialize_from_folder using sqlite.executemany
    * new function utils.iter_complete_to_longest to help with implementing SVNTable.read_from_text, SVNTable.initialize_from_folder
    * removed some redundant SVNRow methods
    * new option 'in+' to define --in command line option with one or more values
    * read-info-map command uses the new 'in+' to accept multiple input files
    * SVNTable.read_from_svn_info refactored to use plain sql instead of sqlalchemy
    * SVNTable.set_base_revision refactored to use plain sql instead of sqlalchemy
    * SVNTable.read_file_sizes refactored to use plain sql instead of sqlalchemy
    * SVNTable.read_props refactored to use plain sqlite instead of sqlalchemy
    * removed redundant methods InstlClientCopy.get_max_repo_rev_for_source, read_file_sizes_original, set_infomap_file_names
    * no need to ResolveStrToStr on svnitem.download_path because it's inserted already resolved
    * SVNTable.get_exec_items renamed get_exec_file_paths and refactored with splain sqlite instead of sqlalchemy
    * new method SVNItem.select_and_fetchall does common part of calling sqlite for getting a single value

2/10/2017 1.6.2.7
    user visible changes: